--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="portfolio">
-<head>
-    <title>Portfolio</title>
-    <link href="./css/bootstrap-theme.css" rel="stylesheet">
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
-    <script src="./js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
-    <script src="./js/vendor/feedback.js"></script>	
-    <script src="https://www.dropbox.com/static/api/dropbox-datastores-1.0-latest.js" type="text/javascript"></script>
-    <script src="./js/main.js"></script>
-	 <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-41519815-2', 'dropboxusercontent.com');
-        ga('send', 'pageview');
-      </script>
-</head>
-
-<body>
-	Test
-</body>
-</html>
+---
+layout: default
+title: Home
+---
+<ul>
+	{% for post in site.posts %}
+	<li>
+		<a href="{{ post.url }}">{{post.title}}</a>
+	</li>
+	{% endfor %}
+</ul>
