--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,3 +3,10 @@ layout: default
 title: Portfolio 
 ---
 Portfolio
+<ul>
+	{% for post in site.categories.portfolio %}
+	<li>
+		<a href="{{ post.url }}">{{post.title}}</a>
+	</li>
+	{% endfor %}
+</ul>
