example at front

--- a/index.html
+++ b/index.html
@@ -2,4 +2,49 @@
 layout: default
 title: Home
 ---
-Home
+<div class = "jumbotron">
+	<h1 class="slogan"> We build small and beautiful software </h1>
+	<div class="fluid-container">
+	<div class="row">
+		<div class = "col-md-4 col-xs-12">
+			<div href="#" class="thumbnail">
+				<img data-src="holder.js/100%x180"></img>
+				<div class="caption">
+			        <h3>Custom Mendix widget</h3>
+			        <p>We make custom Mendix widget</p>
+				<p><a href="#" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+				</div>
+
+			</div>
+		</div>
+		<div class = "col-md-4 col-xs-12">
+			<div href="#" class="thumbnail">
+				<img data-src="holder.js/100%x180"></img>
+				<div class="caption">
+			        <h3>Custom Java Action for Mendix</h3>
+			        <p>We make custom Java Action</p>
+				<p><a href="#" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+				</div>
+
+			</div>
+
+		</div>
+		<div class = "col-md-4 col-xs-12">
+			<div href="#" class="thumbnail">
+				<img data-src="holder.js/100%x180"></img>
+				<div class="caption">
+			        <h3>Hybrid modbile app</h3>
+			        <p>We make Mobile apps</p>
+				<p><a href="#" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+				</div>
+
+
+			</div>
+		</div>
+
+	</div>
+	</div>
+</div>
+<script>
+	console.log("test");
+</script>
