--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
                     <div class="caption">
                         <h3>Custom Mendix widget</h3>
                         <p>We make custom Mendix widget</p>
-                        <p><a href="#" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+                        <p><a href="/portfolio/mxwidget" class="btn btn-primary" role="button">Show more and link to portfolio</a>
                     </div>
                 </div>
             </div>
@@ -20,19 +20,19 @@ title: Home
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180"></img>
                     <div class="caption">
-                        <h3>Custom Java Action for Mendix</h3>
-                        <p>We make custom Java Action</p>
-                        <p><a href="#" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+                        <h3>Visual interaction</h3>
+                        <p>We make beautiful interactive</p>
+                        <p><a href="/portfolio/visualinteraction" class="btn btn-primary" role="button">Show more and link to portfolio</a>
                     </div>
                 </div>
             </div>
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
-                    <img data-sr="holder.js/100%x180"></img>
+                    <img data-src="holder.js/100%x180"></img>
                     <div class="caption">
                         <h3>Hybrid modbile app</h3>
                         <p>We make Mobile apps</p>
-                        <p><a href="#" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+                        <p><a href="/" class="btn btn-primary" role="button">Show more and link to portfolio</a>
                     </div>
                 </div>
             </div>
