--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Home
                     <div class="caption">
                         <h3>Hybrid modbile app</h3>
                         <p>We make Mobile apps</p>
-                        <p><a href="/" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+                        <p><a href="/portfolio/hybridmobileapp" class="btn btn-primary" role="button">Show more and link to portfolio</a>
                     </div>
                 </div>
             </div>
