some more in howworks

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: Home
 	<h2 class="slogan"> We build small and beautiful software</h2>
 	<div class="fluid-container">
         <div class="row">
+
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180"></img>
@@ -16,6 +17,7 @@ title: Home
                     </div>
                 </div>
             </div>
+
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180"></img>
@@ -26,6 +28,7 @@ title: Home
                     </div>
                 </div>
             </div>
+
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180"></img>
@@ -37,6 +40,6 @@ title: Home
                 </div>
             </div>
 
-        </div>
-	</div>
-</div>
+        </div><!-- row -->
+    </div><!-- fluid-container-->
+</div><!-- jumbotron -->
