--- a/customersay/index.html
+++ b/customersay/index.html
@@ -1,12 +1,11 @@
 ---
-layout: post 
+layout: customersay 
 title: Customers say 
 ---
-Customer say
 <ul>
-	{% for post in site.customersay %}
+	{% for post in site.categories.customersay %}
 	<li>
-    {{post.content}}
+        {{post.content}}
 	</li>
 	{% endfor %}
 </ul>
