content for homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 <div class = "jumbotron">
-	<h2 class="slogan"> We build small and beautiful software</h2>
+	<h2 class="slogan"> We build small & beautiful software</h2>
 	<div class="fluid-container">
         <div class="row">
 
@@ -12,8 +12,12 @@ title: Home
                     <img data-src="holder.js/100%x180"></img>
                     <div class="caption">
                         <h3>Custom Mendix widget</h3>
-                        <p>We make custom Mendix widget</p>
-                        <p><a href="/portfolio/mxwidget" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+                        <ul>
+                            <li>More than 3 years of experience</li>
+                            <li>Professional with high quality code</li>
+                            <li>Work with most innovative framework, tools</li>
+                        </ul>
+                        <p><a href="/portfolio/mxwidget" class="btn btn-success btn-block" role="button">Show cases</a>
                     </div>
                 </div>
             </div>
@@ -22,9 +26,13 @@ title: Home
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180"></img>
                     <div class="caption">
-                        <h3>Visual interaction</h3>
-                        <p>We make beautiful interactive</p>
-                        <p><a href="/portfolio/visualinteraction" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+                        <h3>Interactive visualization</h3>
+                        <ul>
+                            <li>Showing story of your data</li>
+                            <li>Creative visual effect</li>
+                            <li>Fun and accessible for users</li>
+                        </ul>
+                        <p><a href="/portfolio/visualinteraction" class="btn btn-success btn-block" role="button">Show cases</a>
                     </div>
                 </div>
             </div>
@@ -33,9 +41,13 @@ title: Home
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180"></img>
                     <div class="caption">
-                        <h3>Hybrid modbile app</h3>
-                        <p>We make Mobile apps</p>
-                        <p><a href="/portfolio/hybridmobileapp" class="btn btn-primary" role="button">Show more and link to portfolio</a>
+                        <h3>Hybrid mobile app</h3>
+                        <ul>
+                            <li>Ionic & AngularJs</li>
+                            <li>Rapid development</li>
+                            <li>Same beautiful design on all devices</li>
+                        </ul>
+                        <p><a href="/portfolio/hybridmobileapp" class="btn btn-success btn-block" role="button">Show cases</a>
                     </div>
                 </div>
             </div>
