some more content and thumb

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: default
 title: Home
 ---
 <div class = "jumbotron">
-	<h2 class="slogan"> We build small & beautiful software</h2>
-	<div class="fluid-container">
+    <div class="class-header"><h2>Innovation first!</h2></div>
+	<div class="fluid-container" style="padding-top:20px;">
         <div class="row">
 
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
-                    <img data-src="holder.js/100%x180"></img>
+                    <img data-src="holder.js/100%x180" src="/images/mendix-logo.png"></img>
                     <div class="caption">
                         <h3>Custom Mendix widget</h3>
                         <ul>
@@ -24,7 +24,7 @@ title: Home
 
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
-                    <img data-src="holder.js/100%x180"></img>
+                    <img data-src="holder.js/100%x180" src="/images/interactive-visualization.png"></img>
                     <div class="caption">
                         <h3>Interactive visualization</h3>
                         <ul>
@@ -39,11 +39,11 @@ title: Home
 
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
-                    <img data-src="holder.js/100%x180"></img>
+                    <img data-src="holder.js/100%x180" src="/images/ionic.png"></img>
                     <div class="caption">
                         <h3>Hybrid mobile app</h3>
                         <ul>
-                            <li>Ionic & AngularJs</li>
+                            <li>Based on Ionic & AngularJs framework</li>
                             <li>Rapid development</li>
                             <li>Same beautiful design on all devices</li>
                         </ul>
