--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
     <div class="class-header"><h2>Innovation first!</h2></div>
 	<div class="fluid-container" style="padding-top:20px;">
         <div class="row">
-
+            <!-- show cases -->
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180" src="/images/mendix-logo.png"></img>
@@ -22,6 +22,7 @@ title: Home
                 </div>
             </div>
 
+            <!-- interactives -->
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180" src="/images/interactive-visualization.png"></img>
@@ -37,6 +38,7 @@ title: Home
                 </div>
             </div>
 
+            <!-- Hybrid -->
             <div class = "col-md-4 col-xs-12">
                 <div href="#" class="thumbnail">
                     <img data-src="holder.js/100%x180" src="/images/ionic.png"></img>
