--- a/howwework/index.html
+++ b/howwework/index.html
@@ -4,7 +4,7 @@ title: Methodology
 ---
 <ul>
 	{% for post in site.categories.howwework %}
-	<li>
+	<li style="list-style-type: none;">
         {{post.content}}
 	</li>
 	{% endfor %}
