--- a/howwework/index.html
+++ b/howwework/index.html
@@ -2,10 +2,10 @@
 layout: default 
 title: Methodology 
 ---
-<ul>
+<div class="row" style="padding: 10px">
 	{% for post in site.categories.howwework %}
-	<li style="list-style-type: none;">
+    <div class="col-md-6 col-sm-6 col-xs-12">
         {{post.content}}
-	</li>
+	</div>
 	{% endfor %}
-</ul>
+</div>
