--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-<div class = "jumbotron">
+<div class = "jumbotron" style="padding: 10px;">
     <div class="class-header"><h2>Innovation first!</h2></div>
 	<div class="fluid-container" style="padding-top:20px;">
         <div class="row">
