--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,12 +1,7 @@
 ---
-layout: default
+layout: portfolio 
 title: Portfolio 
+category: portfolio
 ---
-Portfolio
-<ul>
-	{% for post in site.categories.portfolio %}
-	<li>
-		<a href="{{ post.url }}">{{post.title}}</a>
-	</li>
-	{% endfor %}
-</ul>
+Introduction about mendix widget
+some small code here
