--- a/portfolio/visualinteraction/index.html
+++ b/portfolio/visualinteraction/index.html
@@ -1,12 +1,6 @@
 ---
-layout: default
+layout: portfolio 
 title: Portfolio 
+category: visualinteraction
 ---
-Portfolio
-<ul>
-	{% for post in site.categories.visualinteraction %}
-	<li>
-		<a href="{{ post.url }}">{{post.title}}</a>
-	</li>
-	{% endfor %}
-</ul>
+Something about visual interaction
