--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
         <h2 class="mdl-card__title-text">{{ post.title }}</h2>
       </div>
       <div class="mdl-card__supporting-text">
-        <span>{{ post.date | date: "%b %-d, %Y" }}</span>
+        <!---<span>{{ post.date | date: "%b %-d, %Y" }}</span> --->
         <p>{{ post.excerpt }}</p>
       </div>
       <div class="mdl-card__actions mdl-card--border">
@@ -50,7 +50,7 @@ layout: default
         <h2 class="mdl-card__title-text">{{ post.title }}</h2>
       </div>
       <div class="mdl-card__supporting-text">
-        <span>{{ post.date | date: "%b %-d, %Y" }}</span>
+        <!--- <span>{{ post.date | date: "%b %-d, %Y" }}</span> --->
         <p>{{ post.excerpt }}</p>
       </div>
       <div class="mdl-card__actions mdl-card--border">
